--- a/inte/scss/layout/_portfolio.scss
+++ b/inte/scss/layout/_portfolio.scss
@@ -24,24 +24,21 @@
         padding: $innerGutter 0;
         &.is-hovered{
             .po-item{
-                a{
+                &:after{
+                    opacity: 0.5;
+                    visibility: visible;
+                }
+                &.link-hovered{
                     &:after{
-                        opacity: 0.5;
-                        visibility: visible;
+                        opacity: 0;
+                        visibility: hidden;
                     }
-                    &.link-hovered{
-                        &:after{
-                            opacity: 0;
-                            visibility: hidden;
-                        }
-                    }
+                    
                 }
                 &.cta{
-                    a{
-                        opacity: 0.5;
-                        &.link-hovered{
-                            opacity: 1;
-                        }
+                    &:after{
+                        opacity: 0;
+                        visibility: hidden;
                     }
                 }
             }
@@ -67,6 +64,24 @@
             position: static;
             background: none !important;
         }
+        &:after{
+            content: '';
+            display: block;
+            width: auto;
+            height: auto;
+            position: absolute;
+            top: 10px;
+            right: 0;
+            bottom: 10px;
+            left: 0;
+            background-color: #fff;
+            opacity: 0;
+            visibility: hidden;
+            //transition: 0.6s cubic-bezier(0.325, 0.710, 0.000, 1.010);
+            transition: 0.3s cubic-bezier(0.75, 0, 0.125, 1);
+            pointer-events: none;
+            will-change: opacity;
+        }
         a{
             position: absolute;
             top: $innerGutter;
@@ -83,22 +98,6 @@
                 width: 0;
                 height: 100%;
                 vertical-align: middle;
-            }
-            &:after{
-                content: '';
-                display: block;
-                width: auto;
-                height: auto;
-                position: absolute;
-                top: -2px;
-                right: -2px;
-                bottom: -2px;
-                left: -2px;
-                background-color: #fff;
-                opacity: 0;
-                visibility: hidden;
-                //transition: 0.6s cubic-bezier(0.325, 0.710, 0.000, 1.010);
-                transition: 0.25s cubic-bezier(0.75, 0, 0.125, 1);
             }
             &.transfered{
                 background-color: #34b6b8;
@@ -187,7 +186,6 @@
                     color: $chapo;
                     svg{
                         transform: translate3d(0, 0, 0) scale(1);
-                        
                     }
                 }
             }
